--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "postinstall": "yarn util:ios:refresh-pods",
+    "postinstall": "patch-package && yarn util:ios:refresh-pods",
     "android:local": "react-native run-android --variant=debug",
     "android:staging": "react-native run-android --variant=staging",
     "android:prod": "react-native run-android --variant=release",
@@ -53,6 +53,7 @@
     "expo-font": "9.2.1",
     "expo-secure-store": "10.2.0",
     "expo-video-thumbnails": "5.2.1",
+    "patch-package": "^6.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-final-form": "6.5.2",
@@ -89,6 +90,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.8.4",
+    "@react-native-community/cli-debugger-ui": "^9.0.0",
     "@react-native-community/cli-platform-android": "^8.0.5",
     "@react-native-community/cli-platform-ios": "^8.0.4",
     "@react-native-community/eslint-config": "1.1.0",
