--- a/src/rxjs-api/tsconfig.json
+++ b/src/rxjs-api/tsconfig.json
@@ -6,8 +6,16 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": ".",
-    "lib": ["dom", "es2017"],
-    "typeRoots": ["node_modules/@types"]
+    "lib": [
+      "dom",
+      "es2017"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
-  "exclude": ["dist", "node_modules"]
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
