--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "lib": [
       "es6",
-      "es2017"
+      "es2017",
+      "dom"
     ],
     "allowJs": true,
     "jsx": "react-native",
